# quant_frame

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  index.md
examples/: run_pipeline.py
src/quant_frame/: __init__.py
src/quant_frame/adapters/: __init__.py  csv_provider.py  yahoo_provider.py
src/quant_frame/analytics/: __init__.py  aligner.py  scalers.py  transformer.py
src/quant_frame/core/: __init__.py  config.py  interfaces.py  metrics.py  model_strategy.py  models.py  validators.py
src/quant_frame/performance/: __init__.py  financial.py  plots.py  simulator.py
src/quant_frame/repository/: __init__.py  duckdb_repo.py  postgres_repo.py
src/quant_frame/rl/: __init__.py  allocation_env.py
src/quant_frame/strategies/: __init__.py  ensemble_strategy.py  hmm_strategy.py  llm_strategy.py  ppo_strategy.py  xgboost_strategy.py
src/quant_frame/validation/: __init__.py  evaluator.py  splitter.py
tests/: test_aligner.py  test_allocation_env.py  test_config.py  test_csv_provider.py  test_duckdb_repo.py  test_ensemble_strategy.py  test_evaluator.py  test_hmm_strategy.py  test_init.py  test_interfaces.py  test_llm_strategy.py  test_metrics.py  test_model_strategy.py  test_models.py  test_plots.py  test_postgres_repo.py  test_ppo_strategy.py  test_scalers.py  test_simulator.py  test_transformer.py  test_validation.py  test_validators.py  test_xgboost_strategy.py  test_yahoo_provider.py
